# dream-legacy

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  authors  bootstrap  configure.in  deploy_mac.sh  dream-common.pro  dream-qt4.pro  dream.pro  dream.pro4  drm.spec  drm.spec.in
common/: AMDemodulation.cpp  AMDemodulation.h  AMSSDemodulation.cpp  AMSSDemodulation.h  AudioFile.h  Buffer.h  CRC.cpp  CRC.h  DRMSignalIO.cpp  DRMSignalIO.h  Data.cpp  Data.h  DataDecoder.cpp  DataDecoder.h  DataIO.cpp  DataIO.h  DrmEncoder.cpp  DrmEncoder.h  DrmModulator.cpp  DrmModulator.h  DrmReceiver.cpp  DrmReceiver.h  DrmSimulation.cpp  DrmSimulation.h  DrmTransmitter.cpp  DrmTransmitter.h  DrmTransmitterInterface.h  GPSData.cpp  GPSData.h  GPSReceiver.cpp  GPSReceiver.h  GlobalDefinitions.h  IQInputFilter.m  IQInputFilter.octave  InputResample.cpp  InputResample.h  MDI.cpp  MDI.h  MSCMultiplexer.cpp  MSCMultiplexer.h  (+29 more)
common/FAC/: FAC.cpp  FAC.h
common/GUI-QT/: AMSSDlg.ui  AMSSDlgbase.ui  AboutDlg.ui  AboutDlgbase.ui  AnalogDemDlg.cpp  AnalogDemDlg.h  AnalogDemDlgbase.ui  AnalogMainWindow.cpp  AnalogMainWindow.h  AnalogMainWindow.ui  BWSViewer.cpp  BWSViewer.h  BWSViewer.ui  DRMDialog.cpp  DRMDialog.h  DRMDialog.ui  DRMMainWindow.cpp  DRMMainWindow.h  DRMMainWindow.ui  DRMPlot-qwt5.cpp  DRMPlot-qwt5.h  DRMPlot-qwt6.cpp  DRMPlot-qwt6.h  DRMPlot.cpp  DRMPlot.h  DialogUtil.cpp  DialogUtil.h  EPGDlg.cpp  EPGDlg.h  EPGDlg.ui  EPGDlgbase.ui  EvaluationDlg.cpp  EvaluationDlg.h  GUIUtilities.h  GeneralSettingsDlg.cpp  GeneralSettingsDlg.h  GeneralSettingsDlgbase.ui  JLViewer.cpp  JLViewer.h  JLViewer.ui  (+65 more)
common/GUI-QT/languages/: README.txt  dreamtr.es.qm  dreamtr.es.ts
common/GUI-QT/qt2/: AnalogDemDlgbase.ui  DRMDialogbase.ui  fdrmdialogbase-temp.ui  systemevalDlgbase.ui
common/GUI-QT/res/: icons.qrc  macicons.icns
common/MDI/: AFPacketGenerator.cpp  AFPacketGenerator.h  MDI.h  MDIConcrete.cpp  MDIConcrete.h  MDIDecode.cpp  MDIDecode.h  MDIDefinitions.h  MDIInBuffer.cpp  MDIInBuffer.h  MDINull.h  MDIRSCI.cpp  MDIRSCI.h  MDITagItemDecoders.cpp  MDITagItemDecoders.h  MDITagItems.cpp  MDITagItems.h  MDITagPacketDecoder.cpp  MDITagPacketDecoder.h  PacketInOut.h  PacketSinkFile.cpp  PacketSinkFile.h  PacketSocketNull.cpp  PacketSocketNull.h  PacketSocketQT.cpp  PacketSocketQT.h  PacketSourceFile.cpp  PacketSourceFile.h  Pft.cpp  Pft.h  RCITagItems.cpp  RCITagItems.h  RSCITagItemDecoders.cpp  RSCITagItemDecoders.h  RSISubscriber.cpp  RSISubscriber.h  TagItemDecoder.h  TagPacketDecoder.cpp  TagPacketDecoder.h  TagPacketDecoderMDI.cpp  (+5 more)
common/SDC/: SDC.h  SDCReceive.cpp  SDCReceive.h  SDCTransmit.cpp
common/chanest/: ChanEstTime.cpp  ChanEstTime.h  ChannelEstimation.cpp  ChannelEstimation.h  IdealChannelEstimation.cpp  IdealChannelEstimation.h  TimeDecDir.cpp  TimeDecDir.h  TimeLinear.cpp  TimeLinear.h  TimeWiener.cpp  TimeWiener.h
common/datadecoding/: DABData.cpp  DABMOT.cpp  DABMOT.h  DataApplication.h  DataDecoder.cpp  DataDecoder.h  DataEncoder.cpp  DataEncoder.h  EPGDecoder.cpp  EPGDecoder.h  Journaline.cpp  Journaline.h  MOTSlideShow.cpp  MOTSlideShow.h
common/datadecoding/epg/: EPG.cpp  EPG.h  epgdec.h  (+3 more)
common/drmchannel/: ChannelSimulation.cpp  ChannelSimulation.h
common/interleaver/: SymbolInterleaver.cpp  SymbolInterleaver.h
common/matlib/: Matlib.h  MatlibSigProToolbox.cpp  MatlibSigProToolbox.h  MatlibStdToolbox.cpp  MatlibStdToolbox.h
common/mlc/: BitInterleaver.h  ChannelCode.cpp  ChannelCode.h  ConvEncoder.cpp  ConvEncoder.h  EnergyDispersal.cpp  EnergyDispersal.h  MLC.cpp  MLC.h  Metric.cpp  Metric.h  QAMMapping.cpp  QAMMapping.h  ViterbiDecoder.cpp  ViterbiDecoder.h
common/ofdmcellmapping/: CellMappingTable.cpp  CellMappingTable.h  OFDMCellMapping.cpp  OFDMCellMapping.h
common/resample/: Resample.cpp  Resample.h  ResampleFilter.h  ResampleFilter.m
common/sound/: drm_portaudio.cpp  drm_portaudio.h  pa_ringbuffer.c  pa_ringbuffer.h  soundfile.cpp  soundfile.h  soundnull.h
common/sourcedecoders/: AudioSourceDecoder.cpp  AudioSourceDecoder.h  AudioSourceDecoderInterface.h  AudioSourceEncoder.cpp  AudioSourceEncoder.h  AudioSourceEncoderInterface.h  neaacdec_dll.h
common/sync/: FreqSyncAcq.cpp  FreqSyncAcq.h  RobModeDetection.cpp  RobModeDetection.h  SyncUsingPil.cpp  SyncUsingPil.h  TimeSync.cpp  TimeSync.h  TimeSyncFilter.cpp  TimeSyncFilter.h  TimeSyncFilter.m  TimeSyncTrack.cpp  TimeSyncTrack.h
common/tables/: TableAMSS.h  TableCarMap.h  TableDRMGlobal.h  TableFAC.cpp  TableFAC.h  TableMLC.h  TableQAMMapping.h  TableStations.cpp
common/util/: AudioFile.h  Buffer.h  CRC.cpp  Hamlib.cpp  Hamlib.h  LogPrint.cpp  LogPrint.h  Modul.h  Pacer.h  Reassemble.cpp  ReceiverModul.h  ReceiverModul_impl.h  Settings.cpp  Settings.h  SimulationModul.h  SimulationModul_impl.h  TransmitterModul.h  TransmitterModul_impl.h  Utilities.cpp  Utilities.h  Vector.h  rigclass.cc  rigclass.h
debian/: changelog  control
linux/: DRMSchedule.ini  Makefile.am  Makefile.in  dreamtr.ts
linux/source/: PThread.cpp  PThread.h  Pacer.cpp  alsa.cpp  alsa.h  audiofilein.cpp  jack.cpp  jack.h  oss.cpp  pa_ringbuffer.c  pa_ringbuffer.h  pa_shm_ringbuffer.c  portaudio.cpp  portaudio.h  shmsoundin.cpp  shmsoundin.h  sound.cpp  sound.h  soundcommon.cpp  soundcommon.h  soundin.cpp  soundin.h  soundout.cpp  soundout.h
linux/test/: plotsimres.m
src/: AMDemodulation.cpp  DrmReceiver.cpp  DrmReceiver.h
src/GUI-QT/: DRMPlot.cpp
src/MDI/: MDITagItems.cpp  PacketSocketHTTP.cpp  PacketSocketHTTP.h
src/sourcedecoders/: AudioSourceEncoder.cpp  fdk_aac_codec.cpp
src/util/: Buffer.h  Hamlib.cpp  Hamlib.h
windows/: AMSchedule.ini  AMSchedule.ini - Download.url  DRMSchedule.ini  Dream.cbp  Dream.sln  Dream.vcproj  Dream.workspace  FDRM.cbp  FDRM.dev  FDRM.dsp  FDRM.dsw  FDRM.rc  FDRM.sln  FDRM.vcproj  FDRM_no_aac.dsp  MocGUI.bat  dream.rc  libfaac.cbp  libfaac.vcproj  libfaad.cbp  libfaad.vcproj  libfftw.sln  libfftw.vcproj  qt3.rules  qwt.vcproj  resource.h
windows/Source/: Pacer.cpp  Sound.cpp  Sound.h  SoundWin.h  audiofilein.cpp
windows/moc/: README.txt
windows/test/: DIRINFO.txt
(+13 files in other folders)
