dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.50)
AC_INIT(common/GUI-QT/main.cpp)

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(drm,0.1)

AM_CONFIG_HEADER(config.h)

dnl FIXME, wenn ich das hier nicht mache, knallt es später :-(
dnl KDE_CHECK_TYPES

dnl Checks for programs.
dnl AC_CHECK_COMPILERS

dnl Configuration Arguments

AC_ARG_ENABLE( faad, [    --enable-faad         compile faad AAC support], enable_faad=$enableval, enable_faad=yes)

AC_ARG_ENABLE( arts, [    --enable-arts         use arts audio server], enable_arts=$enableval, enable_arts=no)

AC_ARG_ENABLE( alsa, [    --enable-alsa         use alsa sound lib], enable_alsa=$enableval, enable_alsa=no)

AC_ARG_ENABLE( sound,[    --enable-sound        generic sound support], enable_sound=$enableval, enable_sound=yes)

AC_ARG_WITH( qtdir,[    --with-qtdir=path to QT],QTDIR=$withval)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET

if test "$enable_faad" = "yes"; then
	AC_CHECK_HEADER(faad.h, , enable_faad=no)
	AC_CHECK_LIB(faad,faacDecOpen, , enable_faad=no, "-lm")
	if test "$enable_faad" = "no"; then
		AC_MSG_WARN( "*** Could not find libfaad. Switching to --disable-faad" )
	else
		AC_DEFINE(USE_FAAD, 1, [Define if you want to include AAC audio support])
	fi
fi


if test "$enable_arts" = "yes"; then
	dnl check for artsc-config
	AC_PATH_PROG(ARTSC_CONFIG, artsc-config)
          ARTSC_CFLAGS=`$ARTSC_CONFIG --cflags`
            ARTSC_LIBS=`$ARTSC_CONFIG --libs`
            ac_cv_c_artsserver=no
            save_CFLAGS="$CFLAGS"
            CFLAGS="$CFLAGS $ARTSC_CFLAGS"
            AC_TRY_COMPILE([
             #include <artsc.h>
            ],[
             arts_stream_t stream;
            ],[
            ac_cv_c_artsserver=yes
            ])
            CFLAGS="$save_CFLAGS"
	if test "$ac_cv_c_artsserver" = "yes"
	then
	    AC_SUBST(ARTSLIBS, $ARTSC_LIBS)
	    AC_SUBST(ARTSINCL, $ARTSC_CFLAGS)

	    AC_DEFINE(USE_ARTS, 1, [Define if you want to use the ARTS sound server])
	else
		AC_MSG_WARN( "*** Could not find libartsc. Switching to --disable-arts" )
		enable_arts = no
	fi
	enable_sound="yes"
fi

if test "$enable_alsa" = "yes"; then
	AC_CHECK_HEADER(sys/asoundlib.h, , enable_alsa=no)
	AC_CHECK_LIB(asound, snd_pcm_open, , enable_alsa=no)
	if test "$enable_alsa" = "no"; then
		AC_MSG_WARN( "*** Could not find libasound. Switching to --disable-alsa" )
	else
		AC_DEFINE(USE_ALSA, 1, [Define if you want to use the ALSA audio lib])
		enable_sound=yes
	fi
fi

if test "$enable_sound" = "yes"; then

	AC_DEFINE(WITH_SOUND, 1, [Define if you want to use sound])
	if (test "$enable_arts" = "no") && (test "$enable_alsa" = "no")
	then
		
		dnl fall back is to use /dev/dsp
		AC_DEFINE(USE_DEVDSP, 1, [Define if you want to use /dev/dsp for sound])
	fi
fi


dnl Checks for header files.
AC_HEADER_STDC
AC_LANG_CPLUSPLUS


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for some external libraries that need to be installed
AC_LANG(C++)

dnl fftw
AC_CHECK_LIB(dfftw,fftw_create_plan, , exit 1)
AC_CHECK_LIB(drfftw,rfftw, , exit 1)

dnl QT

dnl $QTDIR should be set prior to running "configure"

saved_ldflags="$LDFLAGS"
LDFLAGS="$LDFLAGS -L$QTDIR/lib"

AC_HAVE_LIBRARY(qt-mt,,exit 1)

AC_PATH_PROG(MOC, moc,, "$QTDIR/bin")
if test -z "$MOC"; then
	AC_MSG_ERROR("No moc found in $QTDIR/bin");
fi
AC_PATH_PROG(UIC, uic,, "$QTDIR/bin")
if test -z "$UIC"; then
	AC_MSG_ERROR("No uic found in $QTDIR/bin");
fi
AC_SUBST(QTDIR)

dnl qwt

AC_HAVE_LIBRARY(qwt, ,exit 1)
AC_SUBST(QWTINCL, "-I/usr/include/qwt")

AC_OUTPUT(Makefile linux/Makefile )
